--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -19,6 +19,9 @@ Les données utilisées ici ....
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
 install.packages(sf)
 install.packages(mapsf)
+install.packages(devtools)
+library(devtools)
+install_github("riatelab/mapsf")
 ```
 
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
@@ -45,39 +48,37 @@ Template cartographique
 
 
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
-template = function(title, file){
-  
-credit = "Françoise Bahoken & Nicolas Lambert, 2021\nSource: United Nations, Department of Economic and Social Affairs, Population Division (2019)"
-theme = mf_theme(x = "default", bg = "white", tab = FALSE, pos = "center", line = 1.5, inner = FALSE, fg = "black", mar = c(0,0, 1.5, 0), cex = 2)
-  
-  mf_export(
-  countries,
-  export = "png",
-  width = 1000,
-  height = 1000,
-  filename = file,
-  res = 96,
-  theme = theme
-)
-mf_map(bbox, col = "#d5ebf2",border = NA, lwd = 0.5, add = TRUE)
-mf_map(graticule, col = "white", lwd = 0.5, add = TRUE)
-mf_map(countries, col = "#baaba2",border = "white", lwd = 0.5, add = TRUE)
-mf_map(land, col = NA,border = "#317691", lwd = 0.5, add = TRUE)
-mf_credits(
-  txt = credit,
-  pos = "bottomright",
-  col = "#1a2640",
-  cex = 0.7,
-  font = 3,
-  bg = NA
-)
-mf_title(title)
-}
+  credit = "Françoise Bahoken & Nicolas Lambert, 2021\nSource: United Nations, Department of Economic and Social Affairs, Population Division (2019)"
+  theme = mf_theme(x = "default", bg = "white", tab = FALSE, pos = "center", line = 3,
+                   inner = TRUE, fg = "#9F2042", mar = c(0,0, 0, 0), cex = 1.5)
 ```
 
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
-template("Template cartographique", "maps/template.png")
-dev.off()
+  title = "Map Template"
+  file = "maps/template.png"
+    mf_export(
+    countries,
+    export = "png",
+    width = 1000,
+    height = 1000,
+    filename = file,
+    res = 96,
+    theme = theme
+  )
+  mf_map(bbox, col = "#d5ebf2",border = NA, lwd = 0.5, add = TRUE)
+  mf_map(graticule, col = "white", lwd = 0.5, add = TRUE)
+  mf_map(countries, col = "#baaba2",border = "white", lwd = 0.5, add = TRUE)
+  mf_map(land, col = NA,border = "#607c9e", lwd = 1, add = TRUE)
+  mf_credits(
+    txt = credit,
+    pos = "bottomright",
+    col = "#1a2640",
+    cex = 0.7,
+    font = 3,
+    bg = NA
+  )
+  mf_title(title)
+  dev.off()
 ```
 
 <img src = "maps/template.png"></img>
@@ -90,9 +91,50 @@ links <- mf_get_links(x = countries, df = migr, x_id = "adm0_a3_is", df_id = c("
 
 
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
-template("L'effet Spaghetti ", "maps/spaghetti.png")
-mf_map(links, col = "#FF000060", lwd = 0.3, add = TRUE)
+  title = "L'effet Spaghetti"
+  file = "maps/spaghetti.png"
+  
+  mf_export(
+    countries,
+    export = "png",
+    width = 1000,
+    height = 1000,
+    filename = file,
+    res = 96,
+    theme = theme
+  )
+  mf_map(bbox, col = "#d5ebf2",border = NA, lwd = 0.5, add = TRUE)
+  mf_map(graticule, col = "white", lwd = 0.5, add = TRUE)
+  mf_map(countries, col = "#baaba2",border = "white", lwd = 0.5, add = TRUE)
+  mf_map(links, col = "#9F204270", lwd = 1, add=TRUE)
+    mf_map(land, col = NA,border = "white", lwd = 0.5, add = TRUE)
+  mf_credits(
+    txt = credit,
+    pos = "bottomright",
+    col = "#1a2640",
+    cex = 0.7,
+    font = 3,
+    bg = NA
+  )
+
+  mf_title(title)
+
 dev.off()
 ```
 
 <img src = "maps/spaghetti.png"></img>
+
+#  Migration Stocks IN a targeted coutry
+
+```{r, eval = FALSE, message = FALSE, warning = FALSE}
+    iso <- "IND"
+    migr <- read.csv("data/fij/migr2019_T.csv")
+    title <- paste0("Migrants in ",iso," in 2019")
+    legtitle <- "Number of migrants\nby country of origin"
+    outputfile <- "maps/fig2.png"
+    col1 <- "#e6392e"
+    col2 <- "#fc8665"
+    fixmax <- 200000
+    inches <- 0.1
+
+```
